Concerts info added - fixed artist name visibility

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -6,7 +6,6 @@ body {
 
 body {
     /*background-color:rgb(56,56,56);*/
-    padding-top:2em;
     /*color: honeydew;*/
     font-size: 14px;
     color: #fff;
